# pydantic-v1v2-test

./: README.md  foobar.py  setup.cfg  tox.ini
src/: foobar.py
src/foobar/: __init__.py
