[metadata]
name = foobar
version = attr:foobar.__version__
description = Test of supporting both v1 and v2 of pydantic
#long_description = file:README.rst
#long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = foobar@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pydantic-v1v2-test

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    pydantic ~= 1.7

[options.packages.find]
where = src

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
