[metadata]
name = foobar
version = 0.0.0
description = Test of supporting both v1 and v2 of pydantic
#long_description = file:README.rst
#long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = foobar@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pydantic-v1v2-test

[options]
py_modules = foobar
package_dir =
    =src
python_requires = >=3.8
install_requires =
    pydantic ~= 1.7

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
